// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`GridContainer Default should match snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "transparent",
        "flex": 1,
      },
      {
        "backgroundColor": "white",
      },
    ]
  }
  testID="addon-backgrounds-container"
>
  <View
    style={
      [
        {
          "marginHorizontal": 0,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "marginHorizontal": 24,
            "maxWidth": "100%",
            "overflow": "scroll",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "flexBasis": "50%",
              "maxWidth": "50%",
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "#c5bea9",
              "borderRadius": 8,
              "paddingVertical": 16,
            }
          }
        >
          <Text>
            Column 1
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "flexBasis": "50%",
              "maxWidth": "50%",
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "#c5bea9",
              "borderRadius": 8,
              "paddingVertical": 16,
            }
          }
        >
          <Text>
            Column 2
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`GridContainer FullWidthSpan should match snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "transparent",
        "flex": 1,
      },
      {
        "backgroundColor": "white",
      },
    ]
  }
  testID="addon-backgrounds-container"
>
  <View
    style={
      [
        {
          "marginHorizontal": 0,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "marginHorizontal": 24,
            "maxWidth": "100%",
            "overflow": "scroll",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "flexBasis": "100%",
              "maxWidth": "100%",
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "#c5bea9",
              "borderRadius": 8,
              "paddingVertical": 16,
            }
          }
        >
          <Text>
            Full width column (span=2 on mobile)
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`GridContainer MixedContent should match snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "transparent",
        "flex": 1,
      },
      {
        "backgroundColor": "white",
      },
    ]
  }
  testID="addon-backgrounds-container"
>
  <View
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "marginHorizontal": 0,
          },
          {
            "height": "100%",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "flexDirection": "row",
              "flexWrap": "wrap",
              "marginHorizontal": 24,
              "maxWidth": "100%",
              "overflow": "scroll",
            },
            {
              "height": "100%",
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "flexBasis": "50%",
                "maxWidth": "50%",
                "paddingHorizontal": 8,
              },
              {
                "height": "100%",
              },
            ]
          }
        >
          <View
            style={
              {
                "backgroundColor": "rgba(255, 0, 0, 0.1)",
                "height": "100%",
              }
            }
          />
        </View>
        <View
          style={
            [
              {
                "flexBasis": "50%",
                "maxWidth": "50%",
                "paddingHorizontal": 8,
              },
              {
                "height": "100%",
              },
            ]
          }
        >
          <View
            style={
              {
                "backgroundColor": "rgba(255, 0, 0, 0.1)",
                "height": "100%",
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "marginHorizontal": 0,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "marginHorizontal": 24,
            "maxWidth": "100%",
            "overflow": "scroll",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "flexBasis": "50%",
              "maxWidth": "50%",
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "marginBottom": 16,
            }
          }
        >
          <Text>
            Content that are not contained should align with contained content
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        [
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "marginHorizontal": 0,
            "maxWidth": "100%",
            "overflow": "scroll",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "flexBasis": "50%",
              "maxWidth": "50%",
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "backgroundColor": "#c5bea9",
                "borderRadius": 8,
                "paddingVertical": 16,
              },
              {
                "paddingHorizontal": 24,
              },
              {
                "marginBottom": 16,
              },
            ]
          }
        >
          <Text>
            Contained text should align.
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        [
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "marginHorizontal": 0,
            "maxWidth": "100%",
            "overflow": "scroll",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "flexBasis": "100%",
              "maxWidth": "100%",
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "backgroundColor": "#c5bea9",
                "borderRadius": 8,
                "paddingVertical": 16,
              },
              {
                "paddingHorizontal": 24,
              },
              {
                "marginBottom": 16,
              },
            ]
          }
        >
          <Text>
            Contained text should align.
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        [
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "marginHorizontal": 24,
            "maxWidth": "100%",
            "overflow": "scroll",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "flexBasis": "100%",
              "maxWidth": "100%",
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "marginBottom": 16,
            }
          }
        >
          <Text>
            Content
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`GridContainer MultipleRows should match snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "transparent",
        "flex": 1,
      },
      {
        "backgroundColor": "white",
      },
    ]
  }
  testID="addon-backgrounds-container"
>
  <View
    style={
      [
        {
          "marginHorizontal": 0,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "marginHorizontal": 24,
            "maxWidth": "100%",
            "overflow": "scroll",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "flexBasis": "50%",
              "maxWidth": "50%",
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "backgroundColor": "#c5bea9",
                "borderRadius": 8,
                "paddingVertical": 16,
              },
              {
                "marginBottom": 16,
              },
            ]
          }
        >
          <Text>
            Row 1, Col 1
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "flexBasis": "50%",
              "maxWidth": "50%",
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "backgroundColor": "#c5bea9",
                "borderRadius": 8,
                "paddingVertical": 16,
              },
              {
                "marginBottom": 16,
              },
            ]
          }
        >
          <Text>
            Row 1, Col 2
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        [
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "marginHorizontal": 24,
            "maxWidth": "100%",
            "overflow": "scroll",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "flexBasis": "50%",
              "maxWidth": "50%",
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "#c5bea9",
              "borderRadius": 8,
              "paddingVertical": 16,
            }
          }
        >
          <Text>
            Row 2, Col 1
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "flexBasis": "50%",
              "maxWidth": "50%",
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "#c5bea9",
              "borderRadius": 8,
              "paddingVertical": 16,
            }
          }
        >
          <Text>
            Row 2, Col 2
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`GridContainer NoWrap should match snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "transparent",
        "flex": 1,
      },
      {
        "backgroundColor": "white",
      },
    ]
  }
  testID="addon-backgrounds-container"
>
  <View
    style={
      [
        {
          "marginHorizontal": 0,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "flexDirection": "row",
            "flexWrap": "nowrap",
            "marginHorizontal": 24,
            "maxWidth": "100%",
            "overflow": "scroll",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "flexBasis": "50%",
              "maxWidth": "50%",
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "#c5bea9",
              "borderRadius": 8,
              "paddingVertical": 16,
            }
          }
        >
          <Text>
            Column 1
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "flexBasis": "50%",
              "maxWidth": "50%",
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "#c5bea9",
              "borderRadius": 8,
              "paddingVertical": 16,
            }
          }
        >
          <Text>
            Column 2
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "flexBasis": "50%",
              "maxWidth": "50%",
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "#c5bea9",
              "borderRadius": 8,
              "paddingVertical": 16,
            }
          }
        >
          <Text>
            Column 2
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "flexBasis": "50%",
              "maxWidth": "50%",
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "#c5bea9",
              "borderRadius": 8,
              "paddingVertical": 16,
            }
          }
        >
          <Text>
            Column 2
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
